[package]
name = "datawrangler"
version = "0.1.0"
edition = "2021"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
datafusion = { version = "39.0" }
nom = "7.1"
rustyline = { version = "14.0", features = ["derive"] }
snmalloc-rs = "0.3"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
