[package]
name = "datawrangler"
version = "0.1.0"
edition = "2021"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
datafusion = { version = "49.0" }
nom = "8.0"
rustyline = { version = "17.0", features = ["derive"] }
shellexpand = { version = "3.1", features = ["path"] }
snmalloc-rs = "0.3"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
