[package]
name = "datawrangler"
version = "0.1.0"
edition = "2021"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
datafusion = { version = "52.3" }
nom = "8.0"
rustyline = { version = "17.0", features = ["derive"] }
shellexpand = { version = "3.1", features = ["path"] }
snmalloc-rs = "0.3"
thiserror = "2.0"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }

[profile.release]
debug = false
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1
